--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/footer.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/footer.html
@@ -1,9 +1,12 @@
 <footer class="main-footer">
-    <div class="footer"> 
-        <div class="rq-container"> 
+    <div class="footer">
+        <div class="rq-container">
             <div class="item1">
-                <a href="index.html" class="site-logo"><img src="../assets/dist/img/logo.png" alt="logo " style="height:200px; width:auto; position: relative; top: -90px  "/></a>
-                <p>Điều tuyệt vời nhất khi đặt hàng tại Glam Corner là tùy chọn thêm "chiếc váy dự phòng" với giá 15$. Về cơ bản, bạn sẽ nhận được hai chiếc váy và chỉ cần giữ nguyên tem trên chiếc bạn quyết định không mặc. Điều này giúp tôi giảm bớt rất nhiều áp lực trong lần thuê đồ đầu tiên.</p>
+                <a href="index.html" class="site-logo"><img src="../assets/dist/img/logo.png" alt="logo "
+                        style="height:200px; width:auto; position: relative; top: -90px  " /></a>
+                <p>Điều tuyệt vời nhất khi đặt hàng tại Glam Corner là tùy chọn thêm "chiếc váy dự phòng" với giá 15$.
+                    Về cơ bản, bạn sẽ nhận được hai chiếc váy và chỉ cần giữ nguyên tem trên chiếc bạn quyết định không
+                    mặc. Điều này giúp tôi giảm bớt rất nhiều áp lực trong lần thuê đồ đầu tiên.</p>
                 <div class="get-touch">
                     <ul class="list-unstyled">
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -12,16 +15,19 @@
                         <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                     </ul>
-                </div></div><div class="item2">
+                </div>
+            </div>
+            <div class="item2">
                 <h3 class="font-18-pla-reg-2">HỖ TRỢ</h3>
                 <ul class="list-unstyled">
                     <li><a href="#">Cách thức hoạt động</a></li>
                     <li><a href="#">Giao hàng & Đổi trả</a></li>
-                    <li><a href="#">Câu hỏi thường gặp (FAQs)</a></li> 
-                    <li><a href="#">Điều khoản & Điều kiện</a></li> 
+                    <li><a href="#">Câu hỏi thường gặp (FAQs)</a></li>
+                    <li><a href="#">Điều khoản & Điều kiện</a></li>
                     <li><a href="#">Hướng dẫn chọn size</a></li>
                 </ul>
-            </div><div class="item3">
+            </div>
+            <div class="item3">
                 <h3 class="font-18-pla-reg-2">DỊCH VỤ</h3>
                 <ul class="list-unstyled">
                     <li><a href="#">Đặt lịch</a></li>
@@ -29,7 +35,8 @@
                     <li><a href="#">Bán lẻ</a></li>
                     <li><a href="#">Danh sách sản phẩm</a></li>
                 </ul>
-            </div><div class="item4">
+            </div>
+            <div class="item4">
                 <h3 class="font-18-pla-reg-2">CÔNG TY</h3>
                 <ul class="list-unstyled">
                     <li><a href="#">Về chúng tôi</a></li>
@@ -37,30 +44,44 @@
                     <li><a href="#">Bài viết gần đây</a></li>
                     <li><a href="#">Thư viện ảnh</a></li>
                 </ul>
-            </div><div class="item5">
+            </div>
+            <div class="item5">
                 <h3 class="font-18-pla-reg-2">LIÊN HỆ</h3>
                 <ul class="list-unstyled contact">
-                    <li class="map-marker"><p>Số 123, Đường ABC</p>
-                        <p>Hà Nội, Việt Nam</p></li>
-                    <li class="phone"><p>+84 987 654 321</p></li>
-                    <li class="mobile"><p>+84 243 000 111</p></li>
-                    <li class="envelope"><p>support@dressrental.com</p></li>
+                    <!-- <li class="map-marker">
+                        <p>Số 123, Đường ABC</p>
+                        <p>Hà Nội, Việt Nam</p>
+                    </li> -->
+                    <li class="phone">
+                        <p>+84 987 654 321</p>
+                    </li>
+                    <li class="mobile">
+                        <p>+84 243 000 111</p>
+                    </li>
+                    <li class="envelope">
+                        <p>support@dressrental.com</p>
+                    </li>
                 </ul>
-            </div><div class="item6">
+            </div>
+            <!-- <div class="item6">
                 <h3 class="font-18-pla-reg-2">BẢN TIN</h3>
                 <p>Đăng ký để nhận những cập nhật và ưu đãi mới nhất.</p>
                 <form>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Nhập địa chỉ email...">
-              <button type="submit" class="btn"><i class="ion-ios-arrow-thin-right"></i></button>
-            </div>
-            
-          </form>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Nhập địa chỉ email...">
+                        <button type="submit" class="btn"><i class="ion-ios-arrow-thin-right"></i></button>
+                    </div>
+
+                </form>
                 <div class="payment">
                     <a href="#"><i class="fa fa-cc-mastercard" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-credit-card" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-cc-paypal" aria-hidden="true"></i></a>
-                </div></div></div></div><div class="bottom-bar">
+                </div>
+            </div> -->
+        </div>
+    </div>
+    <div class="bottom-bar">
         <p>Bản quyền 2024 &copy; thuộc về <a href="#">DRESS RENTAL</a></p>
     </div>
 </footer>
