--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/index.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/index.html
@@ -20,7 +20,6 @@
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../assets/dist/style/responsive.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-
 </head>
 
 <body>
@@ -67,7 +66,7 @@
 					<h4>MỚI <span>50%<br /> <small>GIẢM GIÁ</small></span></h4>
 					<h2>Mùa Xuân</h2>
 					<h3>~ BIẾN TỦ ĐỒ CỦA BẠN TRỞ NÊN ĐỘC NHẤT ~</h3>
-					<a href="#">KHÁM PHÁ NGAY</a>
+					<a href="listing-page.html">KHÁM PHÁ NGAY</a>
 				</div>
 			</div>
 			<div class="item">
@@ -75,12 +74,12 @@
 				<div class="text2">
 					<h2>Siêu Giảm Giá!</h2>
 					<p>Bộ sưu tập Xuân & Đông</p>
-					<a href="#">KHÁM PHÁ NGAY</a>
+					<a href="listing-page.html">KHÁM PHÁ NGAY</a>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="pickupdate">
+	<!-- <div class="pickupdate">
 		<div class="container-fluid">
 			<form>
 				<div class="date-display">
@@ -105,7 +104,7 @@
 				</div>
 			</form>
 		</div>
-	</div>
+	</div> -->
 	<div class="work-procedure base-padd">
 		<div class="container">
 			<h2>Cách thức hoạt động</h2>
@@ -149,7 +148,7 @@
 						<div class="img-wrapper">
 							<img src="../assets/dist/img/content/1.jpg" alt="" />
 							<div class="hover">
-								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách phố</a></h3>
+								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách cổ điển</a></h3>
 								<p class="font-14-for-reg-2">Màu đen là xu hướng mới</p>
 								<a href="listing-page.html" class="font-22-for-reg-2">Xem ngay</a>
 							</div>
@@ -159,7 +158,7 @@
 						<div class="img-wrapper">
 							<img src="../assets/dist/img/content/2.jpg" alt="" />
 							<div class="hover">
-								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách phố</a></h3>
+								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách hiện đại</a></h3>
 								<p class="font-14-for-reg-2">Màu đen là xu hướng mới</p>
 								<a href="listing-page.html" class="font-22-for-reg-2">Xem ngay</a>
 							</div>
@@ -172,7 +171,7 @@
 						<div class="img-wrapper">
 							<img src="../assets/dist/img/content/3.jpg" alt="" />
 							<div class="hover">
-								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách phố</a></h3>
+								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách quý cô</a></h3>
 								<p class="font-14-for-reg-2">Màu đen là xu hướng mới</p>
 								<a href="listing-page.html" class="font-22-for-reg-2">Xem ngay</a>
 							</div>
@@ -187,7 +186,7 @@
 						<div class="img-wrapper fix-height">
 							<img src="../assets/dist/img/content/5.jpg" alt="" />
 							<div class="hover">
-								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách phố</a></h3>
+								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách điệu đà</a></h3>
 								<p class="font-14-for-reg-2">Màu đen là xu hướng mới</p>
 								<a href="listing-page.html" class="font-22-for-reg-2">Xem ngay</a>
 							</div>
@@ -201,7 +200,7 @@
 
 							<img src="../assets/dist/img/content/6.jpg" alt="" />
 							<div class="hover">
-								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách phố</a></h3>
+								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách trẻ trung</a></h3>
 								<p class="font-14-for-reg-2">Màu đen là xu hướng mới</p>
 								<a href="listing-page.html" class="font-22-for-reg-2">Xem ngay</a>
 							</div>
@@ -211,7 +210,7 @@
 						<div class="img-wrapper">
 							<img src="../assets/dist/img/content/7.jpg" alt="" />
 							<div class="hover">
-								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách phố</a></h3>
+								<h3 class="font-40-pla-reg-2"><a href="#">Phong cách dễ thương</a></h3>
 								<p class="font-14-for-reg-2">Màu đen là xu hướng mới</p>
 								<a href="listing-page.html" class="font-22-for-reg-2">Xem ngay</a>
 							</div>
@@ -224,216 +223,16 @@
 	</div>```
 
 
-
-
-	<div class="join-us">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-5">
-					<a href="#" class="btn transparent">Đăng ký</a>
-					<a href="#" class="btn notrans">Mua ngay</a>
-				</div>
-				<div class="col-sm-7">
-					<span class="font-30-pla-reg-2">
-						BẠN CÓ YÊU THÍCH <a href="#">DRESS RENTAL?</a> <br />
-						SỞ HỮU NGAY VÀ TRẢI NGHIỆM MỌI THỨ...
-					</span>
-				</div>
-			</div>
-		</div>
-	</div>
 	<div class="favorites base-padd">
 		<h2>SẢN PHẨM ĐƯỢC YÊU THÍCH</h2>
 		<div class="container">
-			<div class="owl-favorites owl-carousel owl-theme">
-
-				<div class="item">
-					<figure>
-						<img src="../assets/dist/img/favorites/1.png" alt="">
-						<a href="booking.html">Xem ngay</a>
-					</figure>
-					<h3 class="font-20-for-reg-0">REN QUYẾN RŨ</h3>
-					<p class="font-16-for-reg-0">Đen & Trắng</p>
-					<div class="elements">
-						<div class="tool-tip">
-							<span class="tooltiptext">THÊM VÀO DS MONG MUỐN</span>
-							<a href="#"><img src="../assets/dist/img/favorites/wish.png" alt=""></a>
-						</div><span class="font-25-for-reg-0">$99</span>
-						<div class="tool-tip">
-							<span class="tooltiptext">YÊU THÍCH</span>
-							<a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<figure>
-						<img src="../assets/dist/img/favorites/2.png" alt="">
-						<a href="booking.html">Xem ngay</a>
-					</figure>
-					<h3 class="font-20-for-reg-0">DẠ HỘI</h3>
-					<p class="font-16-for-reg-0">Bộ sưu tập SASSA</p>
-					<div class="elements">
-						<div class="tool-tip">
-							<span class="tooltiptext">THÊM VÀO DS MONG MUỐN</span>
-							<a href="#"><img src="../assets/dist/img/favorites/wish.png" alt=""></a>
-						</div><span class="font-25-for-reg-0">$99</span>
-						<div class="tool-tip">
-							<span class="tooltiptext">YÊU THÍCH</span>
-							<a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<figure>
-						<img src="../assets/dist/img/favorites/2.png" alt="">
-						<a href="booking.html">Xem ngay</a>
-					</figure>
-					<h3 class="font-20-for-reg-0">THANH LỊCH</h3>
-					<p class="font-16-for-reg-0">Đen & Trắng</p>
-					<div class="elements">
-						<div class="tool-tip">
-							<span class="tooltiptext">THÊM VÀO DS MONG MUỐN</span>
-							<a href="#"><img src="../assets/dist/img/favorites/wish.png" alt=""></a>
-						</div><span class="font-25-for-reg-0">$99</span>
-						<div class="tool-tip">
-							<span class="tooltiptext">YÊU THÍCH</span>
-							<a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<figure>
-						<img src="../assets/dist/img/favorites/4.png" alt="">
-						<a href="booking.html">Xem ngay</a>
-					</figure>
-					<h3 class="font-20-for-reg-0">HỒNG NGỌT NGÀO</h3>
-					<p class="font-16-for-reg-0">Đen & Trắng</p>
-					<div class="elements">
-						<div class="tool-tip">
-							<span class="tooltiptext">THÊM VÀO DS MONG MUỐN</span>
-							<a href="#"><img src="../assets/dist/img/favorites/wish.png" alt=""></a>
-						</div><span class="font-25-for-reg-0">$99</span>
-						<div class="tool-tip">
-							<span class="tooltiptext">YÊU THÍCH</span>
-							<a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<figure>
-						<img src="../assets/dist/img/favorites/5.png" alt="">
-						<a href="booking.html">Xem ngay</a>
-					</figure>
-					<h3 class="font-20-for-reg-0">TRẮNG TINH KHÔI</h3>
-					<p class="font-16-for-reg-0">Bộ sưu tập SASSA</p>
-					<div class="elements">
-						<div class="tool-tip">
-							<span class="tooltiptext">THÊM VÀO DS MONG MUỐN</span>
-							<a href="#"><img src="../assets/dist/img/favorites/wish.png" alt=""></a>
-						</div><span class="font-25-for-reg-0">$99</span>
-						<div class="tool-tip">
-							<span class="tooltiptext">YÊU THÍCH</span>
-							<a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<figure>
-						<img src="../assets/dist/img/favorites/1.png" alt="">
-						<a href="booking.html">Xem ngay</a>
-					</figure>
-					<h3 class="font-20-for-reg-0">REN QUYẾN RŨ</h3>
-					<p class="font-16-for-reg-0">Đen & Trắng</p>
-					<div class="elements">
-						<div class="tool-tip">
-							<span class="tooltiptext">THÊM VÀO DS MONG MUỐN</span>
-							<a href="#"><img src="../assets/dist/img/favorites/wish.png" alt=""></a>
-						</div><span class="font-25-for-reg-0">$99</span>
-						<div class="tool-tip">
-							<span class="tooltiptext">YÊU THÍCH</span>
-							<a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<figure>
-						<img src="../assets/dist/img/favorites/2.png" alt="">
-						<a href="booking.html">Xem ngay</a>
-					</figure>
-					<h3 class="font-20-for-reg-0">DẠ HỘI</h3>
-					<p class="font-16-for-reg-0">Bộ sưu tập SASSA</p>
-					<div class="elements">
-						<div class="tool-tip">
-							<span class="tooltiptext">THÊM VÀO DS MONG MUỐN</span>
-							<a href="#"><img src="../assets/dist/img/favorites/wish.png" alt=""></a>
-						</div><span class="font-25-for-reg-0">$99</span>
-						<div class="tool-tip">
-							<span class="tooltiptext">YÊU THÍCH</span>
-							<a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<figure>
-						<img src="../assets/dist/img/favorites/2.png" alt="">
-						<a href="booking.html">Xem ngay</a>
-					</figure>
-					<h3 class="font-20-for-reg-0">THANH LỊCH</h3>
-					<p class="font-16-for-reg-0">Đen & Trắng</p>
-					<div class="elements">
-						<div class="tool-tip">
-							<span class="tooltiptext">THÊM VÀO DS MONG MUỐN</span>
-							<a href="#"><img src="../assets/dist/img/favorites/wish.png" alt=""></a>
-						</div><span class="font-25-for-reg-0">$99</span>
-						<div class="tool-tip">
-							<span class="tooltiptext">YÊU THÍCH</span>
-							<a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<figure>
-						<img src="../assets/dist/img/favorites/4.png" alt="">
-						<a href="booking.html">Xem ngay</a>
-					</figure>
-					<h3 class="font-20-for-reg-0">HỒNG NGỌT NGÀO</h3>
-					<p class="font-16-for-reg-0">Đen & Trắng</p>
-					<div class="elements">
-						<div class="tool-tip">
-							<span class="tooltiptext">THÊM VÀO DS MONG MUỐN</span>
-							<a href="#"><img src="../assets/dist/img/favorites/wish.png" alt=""></a>
-						</div><span class="font-25-for-reg-0">$99</span>
-						<div class="tool-tip">
-							<span class="tooltiptext">YÊU THÍCH</span>
-							<a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="item">
-					<figure>
-						<img src="../assets/dist/img/favorites/5.png" alt="">
-						<a href="booking.html">Xem ngay</a>
-					</figure>
-					<h3 class="font-20-for-reg-0">TRẮNG TINH KHÔI</h3>
-					<p class="font-16-for-reg-0">Bộ sưu tập SASSA</p>
-					<div class="elements">
-						<div class="tool-tip">
-							<span class="tooltiptext">THÊM VÀO DS MONG MUỐN</span>
-							<a href="#"><img src="../assets/dist/img/favorites/wish.png" alt=""></a>
-						</div><span class="font-25-for-reg-0">$99</span>
-						<div class="tool-tip">
-							<span class="tooltiptext">YÊU THÍCH</span>
-							<a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
+			<div class="owl-favorites owl-carousel owl-theme"></div>
 		</div>
 	</div>```
 
 
 
-	<div class="newsletter base-padd">
+	<!-- <div class="newsletter base-padd">
 		<h2>ĐĂNG KÝ NHẬN BẢN TIN</h2>
 		<div class="container">
 			<form class="form-inline">
@@ -447,7 +246,7 @@
 				<a href="#" class="btn notrans">Đăng nhập</a>
 			</form>
 		</div>
-	</div>
+	</div> -->
 	<div class="opinion base-padd">
 		<div class="container">
 			<div class="owl-opinion owl-carousel owl-theme">
@@ -631,69 +430,6 @@
 			</div>
 		</div>
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	<div id="footer-placeholder"></div>
 	<script>
 		fetch('footer.html')
@@ -724,6 +460,127 @@
 	<script src="../assets/dist/js/vendor/jquery.smooth-scroll.js"></script>
 	<script src="../assets/dist/js/custom.js"></script>
 	<script src="../assets/dist/js/auth-header.js"></script>
+	<script>
+		// ✅ dùng được local + deploy (deploy thì API_BASE = "" => gọi relative cùng domain)
+		const isLocal = location.hostname === "localhost" || location.hostname === "127.0.0.1";
+		const API_BASE = isLocal ? "http://localhost:5135" : "";
+
+		function formatVND(n) {
+			try {
+				return new Intl.NumberFormat("vi-VN", { style: "currency", currency: "VND" }).format(n ?? 0);
+			} catch {
+				return (n ?? 0) + " VND";
+			}
+		}
+
+		function buildAssetUrl(pathOrUrl) {
+			if (!pathOrUrl) return "";
+			if (pathOrUrl.startsWith("http://") || pathOrUrl.startsWith("https://")) return pathOrUrl;
+			return API_BASE + pathOrUrl;
+		}
+
+		async function renderLatestFavorites(limit = 5) {
+			const container = document.querySelector(".owl-favorites");
+			if (!container) return;
+
+			const url = API_BASE + `/api/products/latest-favorites?limit=${encodeURIComponent(limit)}`;
+			console.log("LATEST FAVORITES URL:", url);
+
+			const res = await fetch(url, {
+				method: "GET",
+				headers: { "Accept": "application/json" }
+			});
+
+			if (!res.ok) {
+				console.error("Latest favorites fetch failed:", res.status, await res.text());
+				return;
+			}
+
+			const json = await res.json();
+			const items = (json && json.data) ? json.data : [];
+
+			// destroy carousel nếu đã init
+			if (window.jQuery && jQuery(container).hasClass("owl-loaded")) {
+				jQuery(container).trigger("destroy.owl.carousel");
+				container.classList.remove("owl-loaded");
+				container.innerHTML = "";
+			} else {
+				container.innerHTML = "";
+			}
+
+			const html = items.map(p => {
+				const id = p.id ?? p.Id;
+				const nameText = p.name ?? p.Name ?? "";
+				const name = (nameText || "").replaceAll('"', "&quot;");
+
+				const imgPath = p.imageUrl || p.ImageUrl || "";
+				const img = buildAssetUrl(imgPath) || "../assets/dist/img/favorites/1.png";
+
+				const minPrice = p.minPricePerDay ?? p.MinPricePerDay ?? 0;
+				const deposit = p.depositAmount ?? p.DepositAmount ?? 0;
+
+				const priceText = formatVND(minPrice);
+				const depositText = formatVND(deposit);
+
+				const detailUrl = `booking.html?id=${encodeURIComponent(id)}`;
+
+				return `
+        <div class="item">
+          <figure>
+            <img src="${img}" alt="${name}">
+            <a href="${detailUrl}">Xem ngay</a>
+          </figure>
+
+          <h3 class="font-20-for-reg-0">${nameText}</h3>
+          <div class="elements" style="display:block;">
+            <!-- Dòng giá -->
+            <div style="display:flex; flex-direction:column; gap:6px;">
+              <span class="font-25-for-reg-0">Giá thuê: ${priceText}</span>
+              <span class="font-16-for-reg-0">Giá cọc: ${depositText}</span>
+            </div>
+
+            <!-- Dòng icon (xuống dưới) -->
+            <div style="display:flex; gap:12px; align-items:center; margin-top:10px;">
+              <div class="tool-tip">
+                <span class="tooltiptext">THÊM VÀO GIỎ HÀNG</span>
+                <a href="#" onclick="event.preventDefault();">
+                  <img src="../assets/dist/img/favorites/wish.png" alt="">
+                </a>
+              </div>
+
+              <div class="tool-tip">
+                <span class="tooltiptext">YÊU THÍCH</span>
+                <a href="#" onclick="event.preventDefault();">
+                  <i class="fa fa-heart-o" aria-hidden="true"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      `;
+			}).join("");
+
+			container.insertAdjacentHTML("beforeend", html);
+
+			if (window.jQuery) {
+				jQuery(container).owlCarousel({
+					loop: true,
+					margin: 30,
+					nav: true,
+					dots: false,
+					responsive: {
+						0: { items: 1 },
+						768: { items: 2 },
+						992: { items: 4 }
+					}
+				});
+			}
+		}
+
+		document.addEventListener("DOMContentLoaded", () => {
+			renderLatestFavorites(5).catch(console.error);
+		});
+	</script>
 </body>
 
 <!-- Mirrored from wpdemo.redq.io/sites/dress-rental/html/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jan 2026 15:16:20 GMT -->
