--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/about-us.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/about-us.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title> Dress rental </title>
+	<title> Xúng Xính </title>
 	<link
 		href="https://fonts.googleapis.com/css?family=Abril+Fatface|Forum|Open+Sans:400,600|Roboto:100,300,400,500,700"
 		rel="stylesheet">
@@ -58,12 +58,6 @@
 		<button class="search-close close" type="button"><i class="fa fa-times"></i></button>
 	</div>
 
-	<div class="top-bar" id="top_bar">
-		<div class="container">
-			<p class="font-14-ope-reg-0 text-center margin-0">…Enjoy 20% off when you sign up to become a member...</p>
-			<i class="ion-ios-close-empty"></i>
-		</div><!-- /.container -->
-	</div><!-- /.top-bar -->
 
 	<div id="header-placeholder"></div>
 
