--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/listing-page.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/listing-page.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title> Dress rental </title>
+	<title> Xúng Xính </title>
 	<link
 		href="https://fonts.googleapis.com/css?family=Abril+Fatface|Forum|Open+Sans:400,600|Roboto:100,300,400,500,700"
 		rel="stylesheet">
